--- a/panel.css
+++ b/panel.css
@@ -8,6 +8,7 @@
   /* Colors */
   --color-primary: #007acc;
   --color-primary-hover: #005a9e;
+  --color-primary-light: #e3f2ff;
   --color-secondary: #666;
   --color-success: #4caf50;
   --color-danger: #f44336;
@@ -234,7 +235,7 @@ body {
 }
 
 .datalayer-item:hover {
-  background-color: var(--color-bg-tertiary);
+  background-color: var(--color-primary-light);
 }
 
 .datalayer-item:last-child {
